--- a/apps/argocd/versions/1.0--9.1.0/kustomization.yaml
+++ b/apps/argocd/versions/1.0--9.1.0/kustomization.yaml
@@ -2,6 +2,6 @@
 resources:
   - ./generated.yaml # generated from argo kustomized plugin
 
-#generators:
-#  - ./secret-generator.yaml
+generators:
+  - ./secret-generator.yaml
   
