--- a/apps/hcloud-csi/versions/1.0.0--2.18.3/hcloud-secret.enc.yaml
+++ b/apps/hcloud-csi/versions/1.0.0--2.18.3/hcloud-secret.enc.yaml
@@ -1,8 +1,23 @@
-# secret.yml
+#ENC[AES256_GCM,data:Zh+6LdXiqDKfTdc=,iv:7VUlhpp/3K7SP+/RHlz0GZgMDnuoslqankhM/GWYLo4=,tag:masm2RlztYQeRsU6k2cHOA==,type:comment]
 apiVersion: v1
 kind: Secret
 metadata:
-  name: hcloud
-  namespace: kube-system
+    name: hcloud
+    namespace: kube-system
 stringData:
-  token: 0OizK0WnHGp2zg6a8eVBRUAyXCAklNQFlHFQlWNcm5qNebjyzwR5xI6gMQ5iElaf
+    token: ENC[AES256_GCM,data:mYCfbTWU6yI8KmTC36Nyxv5OqxEcshPxxv6P/Q63+RZnC7Sj8lQcd6/cuu8FEEScWok+NZ2gTLV+RIFpZ7zMVA==,iv:9Lv8joU3+wSjpSoA5RhxaAWuTa9oT+o7lXcDn4JT2W0=,tag:N1WMIh9I8dh1aG4Afg+xnQ==,type:str]
+sops:
+    age:
+        - recipient: age1vvpm73fq42ywkr7jeuewjpk8d9hew9u3dq389dy9r85ugezqgy6qh8zqzy
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKd2Ntd3pGeFhTVytPUTBn
+            Ujh4V0tBNGpFWGh1T2gyZ1UxYnNPYXJmZzJNCmpDaGk3YmFrdkNWTkNUdmMxSE1j
+            WE1zOTVoWTFnV2xUSTAzVUNrUTFJWDAKLS0tIHdPUVNXeHRKTEFSWGNQUE9scHhn
+            dFlnT1cwamVyc3pMaE9xQk5PYTZZdW8KbDLxGDuDgKWkNrm5Ax97ZfvUEqsPAVIl
+            C3x0SEK8ovWx0PPjCK1WgAETdTrYY4GCPMM3ObHuMREbFPwbQM0zvw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2026-01-28T21:52:00Z"
+    mac: ENC[AES256_GCM,data:KZG1zOKLRJhx+XIysOM+IxqbZYlLR11R8qKSgvsQ/85oSTJoOi4aGFsqEbpLynwW2r/TuCd8okhD010XBpjr5y/bJCLSmIFYg9t5r7LXf5IZd6oKP48PL6F1yHVwDUvyb3aPCquA43Q55BT9jdeB6ynmjNAlkAcv9Rqmuwh6oXE=,iv:l7+DbolTYK4Hq2RSaC0yIM8ozSKNBWk8csOpsvGZZxQ=,tag:XI9Cwbhjg3xH19RP/s8MJA==,type:str]
+    unencrypted_regex: ^(apiVersion|kind|metadata|type|namespace)$
+    version: 3.11.0
