--- a/apps/cilium/versions/1.0--1.18.6/kustomization.yaml
+++ b/apps/cilium/versions/1.0--1.18.6/kustomization.yaml
@@ -1,6 +1,4 @@
 resources:
 - ./generated.yaml
-- ./manifests/prometheusrules/cilium-health-endpoint-unreachable.yaml
-- ./manifests/prometheusrules/cilium-node-unreachable.yaml
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+# - ./manifests/prometheusrules/cilium-health-endpoint-unreachable.yaml
+# - ./manifests/prometheusrules/cilium-node-unreachable.yaml
