--- a/apps/cilium/versions/1.0--1.18.6/values.yaml
+++ b/apps/cilium/versions/1.0--1.18.6/values.yaml
@@ -47,7 +47,7 @@ encryption:
   enabled: false
   type: wireguard
 
-defaultLBServiceIPAM: ""
+defaultLBServiceIPAM: "lbipam"
 
 nodePort:
   enabled: true
