--- a/apps/kube-prometheus-stack/versions/1.0--81.2.2/values.yaml
+++ b/apps/kube-prometheus-stack/versions/1.0--81.2.2/values.yaml
@@ -56,7 +56,7 @@ grafana:
 
 
 alertmanager:
-  enabled: true
+  enabled: false # disabled for now
   alertmanagerSpec:
       # https://github.com/prometheus-operator/prometheus-operator/discussions/3733
       # used to ensure the root receiver does not get a namespace=monitoring matcher applied
