--- a/apps/hcloud-hccm/versions/1.0--1.29.2/values.yaml
+++ b/apps/hcloud-hccm/versions/1.0--1.29.2/values.yaml
@@ -1,2 +1,9 @@
 ---
-# default
+
+extraArgs:
+  leader-elect: "false"
+  allocate-node-cidrs: "false"
+
+hostNetwork: true
+dnsPolicy: Default
+priorityClassName: system-cluster-critical
