--- a/apps/hcloud-hccm/versions/1.0--1.29.2/values.yaml
+++ b/apps/hcloud-hccm/versions/1.0--1.29.2/values.yaml
@@ -1,9 +1,5 @@
 ---
-
-extraArgs:
-  leader-elect: "false"
-  allocate-node-cidrs: "false"
-
-hostNetwork: true
-dnsPolicy: Default
-priorityClassName: system-cluster-critical
+# based on terraform module defaults
+networking:
+  enabled: true
+  clusterCIDR: 10.0.16.0/20
