--- a/apps/kube-prometheus-stack/versions/1.0--81.2.2/values.yaml
+++ b/apps/kube-prometheus-stack/versions/1.0--81.2.2/values.yaml
@@ -10,6 +10,13 @@ crds:
   upgradeJob:
     enabled: false
 
+prometheus-node-exporter:
+  tolerations:
+    - operator: Exists
+  hostPID: true
+  securityContext:
+    privileged: true
+
 grafana:
   # adminPassword: "<admin-password>"
 
