--- a/apps/kube-prometheus-stack/versions/1.0--81.2.2/kustomization.yaml
+++ b/apps/kube-prometheus-stack/versions/1.0--81.2.2/kustomization.yaml
@@ -19,5 +19,9 @@ patches:
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+patchesStrategicMerge:
+  - patch-namespace-monitoring.yaml
+
+
 #generators:
 #- ./secret-generator.yaml
