--- a/apps/kube-prometheus-stack/versions/1.0--81.2.2/kustomization.yaml
+++ b/apps/kube-prometheus-stack/versions/1.0--81.2.2/kustomization.yaml
@@ -16,7 +16,10 @@ patches:
 - path: ./patch-prometheus.yaml
   target:
     kind: Prometheus
-- patch: patch-namespace.yaml
+- path: patch-namespace.yaml
+  target:
+    kind: Namespace
+    name: monitoring
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
