--- a/apps/argocd/versions/1.0--9.3.7/values.yaml
+++ b/apps/argocd/versions/1.0--9.3.7/values.yaml
@@ -19,7 +19,7 @@ configs:
     # Add the following resource customization in argocd-cm ConfigMap:
     resource.customizations.health.argoproj.io_Application: |
       hs = {}
-      hs.status = "Healthy"
+      hs.status = "Progressing"
       hs.message = ""
       if obj.status ~= nil then
         if obj.status.health ~= nil then
