--- a/apps/argocd/versions/1.0--9.3.7/values.yaml
+++ b/apps/argocd/versions/1.0--9.3.7/values.yaml
@@ -31,17 +31,8 @@ configs:
       end
       return hs
 
-    resource.customizations.health.monitoring.coreos.com_PrometheusRule: |
-      hs = {}
-      hs.status = "Healthy"
-      return hs
-
-    resource.customizations.health.monitoring.coreos.com_ServiceMonitor: |
-      hs = {}
-      hs.status = "Healthy"
-      return hs
-
-    resource.customizations.health.networking.k8s.io_IngressClass: |
+    # Cilium health checks
+    resource.customizations.health.v1_Endpoints: |
       hs = {}
       hs.status = "Healthy"
       return hs
