--- a/apps/cilium/versions/1.0--1.18.6/values.yaml
+++ b/apps/cilium/versions/1.0--1.18.6/values.yaml
@@ -96,7 +96,7 @@ ingressController:
   service:
     annotations:
       load-balancer.hetzner.cloud/location: "nbg1"
-      load-balancer.hetzner.cloud/name: "k8s01-lb-cilium-ingress"
+      load-balancer.hetzner.cloud/name: "k8s01-lb01"
 
 #gatewayAPI:
 #  enabled: false
