--- a/apps/hcloud-secret/versions/1.0--1.0/secret-generator.yaml
+++ b/apps/hcloud-secret/versions/1.0--1.0/secret-generator.yaml
@@ -1,7 +1,7 @@
 apiVersion: viaduct.ai/v1
 kind: ksops
 metadata:
-  name: hcloud-csi-secret-generator
+  name: hcloud-secret-generator
   annotations:
     config.kubernetes.io/function: |
       exec:
