--- a/apps/regcred-secret/versions/1.0--1.0/secret-generator.yaml
+++ b/apps/regcred-secret/versions/1.0--1.0/secret-generator.yaml
@@ -1,5 +1,10 @@
----
-
-generators:
-  - ./secret-generator.yaml
-  
+apiVersion: viaduct.ai/v1
+kind: ksops
+metadata:
+  name: regcred-secret-generator
+  annotations:
+    config.kubernetes.io/function: |
+      exec:
+        path: ksops
+files:
+  - ./regcred-secret.enc.yaml
