--- a/apps/regcred-secret/versions/1.0--1.0/kustomization.yaml
+++ b/apps/regcred-secret/versions/1.0--1.0/kustomization.yaml
@@ -1,10 +1,5 @@
-apiVersion: viaduct.ai/v1
-kind: ksops
-metadata:
-  name: regcred-secret-generator
-  annotations:
-    config.kubernetes.io/function: |
-      exec:
-        path: ksops
-files:
-  - ./regcred-secret.enc.yaml
+---
+
+generators:
+  - ./secret-generator.yaml
+  
