--- a/apps/regcred-secret/versions/1.0--1.0/kustomization.yaml
+++ b/apps/regcred-secret/versions/1.0--1.0/kustomization.yaml
@@ -1,4 +1,7 @@
 ---
+resources:
+  - ./manifests/replicate-cluster-policy.yaml
+  - ./manifests/inject-cluster-policy.yaml
 
 generators:
   - ./secret-generator.yaml
