--- a/apps/kyverno/versions/1.0--3.6.2/values.yaml
+++ b/apps/kyverno/versions/1.0--3.6.2/values.yaml
@@ -1,8 +1,15 @@
-extraClusterRoleRules:
-  - apiGroups: [""]
-    resources:
-      - secrets
-    verbs:
-      - get
-      - list
-      - watch
+admissionController:
+  rbac:
+    clusterRole:
+      extraResources:
+        - apiGroups: [""]
+          resources: ["secrets"]
+          verbs: ["get", "list", "watch"]
+
+backgroundController:
+  rbac:
+    clusterRole:
+      extraResources:
+        - apiGroups: [""]
+          resources: ["secrets"]
+          verbs: ["get", "list", "watch"]
