--- a/apps/kyverno/versions/1.0--3.6.2/values.yaml
+++ b/apps/kyverno/versions/1.0--3.6.2/values.yaml
@@ -12,4 +12,11 @@ backgroundController:
       extraResources:
         - apiGroups: [""]
           resources: ["secrets"]
-          verbs: ["get", "list", "watch"]
+          verbs:
+            - get
+            - list
+            - watch
+            - create
+            - update
+            - patch
+            - delete
