--- a/apps/lette-redis/versions/1.0--4.35.7/values.yaml
+++ b/apps/lette-redis/versions/1.0--4.35.7/values.yaml
@@ -46,8 +46,7 @@ resources:
       cpu: 100m
       memory: 128Mi
 
-affinity:
-  antiAffinity: hard
+affinity: hard
 
 podDisruptionBudget:
   enabled: true
