--- a/apps/lette-redis/versions/1.0--4.35.7/values.yaml
+++ b/apps/lette-redis/versions/1.0--4.35.7/values.yaml
@@ -46,7 +46,16 @@ resources:
       cpu: 100m
       memory: 128Mi
 
-affinity: hard
+affinity:
+  podAntiAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      - labelSelector:
+          matchExpressions:
+            - key: app
+              operator: In
+              values:
+                - redis-ha
+        topologyKey: kubernetes.io/hostname
 
 podDisruptionBudget:
   enabled: true
