--- a/apps/lette-proxy/versions/1.0--1.0/redis-secret.enc.yaml
+++ b/apps/lette-proxy/versions/1.0--1.0/redis-secret.enc.yaml
@@ -1,7 +1,22 @@
 apiVersion: v1
 data:
-  password: clBUTklhMm5HVHlnMW02aVprMjRPeQ==
+    password: ENC[AES256_GCM,data:M7v1KEXL4CoyNrlR09PnR7aGG7QmtDLfIA7ehOJ6Lr8=,iv:MMk8f+yAqFJywnkU3C76phvgrcxlhLZrT65Z9YKw168=,tag:EvwwEIoKTx6u7WfBDIQsPQ==,type:str]
 kind: Secret
 metadata:
-  name: redis
+    name: redis
 type: Opaque
+sops:
+    age:
+        - recipient: age1vvpm73fq42ywkr7jeuewjpk8d9hew9u3dq389dy9r85ugezqgy6qh8zqzy
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0ajRJTE1FVEZNRjI0RXI3
+            WmlpOE53UG1FKzZnMUVPbXVHQUFoUUh5ZEJrCnp5d2k5L0swM3dzRTVDR3czSytN
+            M1k1YVdSL1JOQzY5S21jWHhESEI3b1UKLS0tIEhlY0RGa0d1Y0hxZzF5THdHczVU
+            VGRxRVduMlM5TzNZeVhjekJSTjZpWncKH6xSwvvyZVGpz1THswWieKBJXD5lyzjx
+            MhhSwsHwcsAM3JSME7EEO3s24R4vPK2EXfgwrnhZ4jPMKN/mFZMHmw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2026-01-30T12:40:57Z"
+    mac: ENC[AES256_GCM,data:GSIMOxZfCg5ATUY/EXjpus/9i0PeWshEh3skpnWTjzrNxXdIekRArg9WEJTdOWPGEMdE/Ae6G2hoS3ZdoLmxB/jdTDmZYinnWsmYVLEzTMF0ywy4HfDcCgJhqt68W09virlaTl4bKblNucpGV8r1Kx93UCFZngqTPdNf+4ezv+Q=,iv:NJyHS6h7OYydbo30ew+7zYcoafjGDr3G2vKpGz+iWCQ=,tag:nUaF/miKwBOQq8K8pZHCKw==,type:str]
+    unencrypted_regex: ^(apiVersion|kind|metadata|type|namespace)$
+    version: 3.11.0
