--- a/apps/lette-proxy/versions/1.0--1.0/kustomization.yaml
+++ b/apps/lette-proxy/versions/1.0--1.0/kustomization.yaml
@@ -1,5 +1,8 @@
 ---
-
+resources:
+  - ./manifests/lette-deployment.yaml
+  - ./manifests/lette-service.yaml
+  
 generators:
   - ./secret-generator.yaml
   
