--- a/apps/lette-proxy/versions/1.0--1.0/secret-generator.yaml
+++ b/apps/lette-proxy/versions/1.0--1.0/secret-generator.yaml
@@ -8,3 +8,6 @@ metadata:
         path: ksops
 files:
   - ./redis-secret.enc.yaml
+  - ./client-keypair-secret.enc.yaml
+  - ./supabase-key-secret.enc.yaml
+  - ./namedotcom-token-secret.enc.yaml
