--- a/apps/lette-proxy/versions/1.0--1.0/manifests/lette-deployment.yaml
+++ b/apps/lette-proxy/versions/1.0--1.0/manifests/lette-deployment.yaml
@@ -67,7 +67,7 @@ spec:
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: redis-secret
+                  name: redis
                   key: password
             - name: REDIS_PORT
           volumeMounts:
