--- a/apps/lette-proxy/versions/1.0--1.0/manifests/lette-deployment.yaml
+++ b/apps/lette-proxy/versions/1.0--1.0/manifests/lette-deployment.yaml
@@ -62,7 +62,7 @@ spec:
                 secretKeyRef:
                   name: supabase-key
                   key: key
-            - name: REDIS_HOST
+            - name: REDIS_ADDRESS
               value: lette-redis-redis-ha.lette-redis.svc.cluster.local:6379
             - name: REDIS_PASSWORD
               valueFrom:
