--- a/apps/lette-proxy/versions/1.0--1.0/manifests/lette-deployment.yaml
+++ b/apps/lette-proxy/versions/1.0--1.0/manifests/lette-deployment.yaml
@@ -34,6 +34,8 @@ spec:
               containerPort: 1993
               protocol: TCP
           env:
+            - name: ACME_STAGING
+              value: "true"
             - name: INSECURE
               value: "true"
             - name: SMTP_LOCAL_NAME
