--- a/apps/lette-proxy/versions/1.0--1.0/manifests/lette-service.yaml
+++ b/apps/lette-proxy/versions/1.0--1.0/manifests/lette-service.yaml
@@ -9,6 +9,7 @@ metadata:
     app: lette-proxy
 spec:
   type: LoadBalancer
+  externalTrafficPolicy: Local
   selector:
     app: lette-proxy
   ports:
